academy add social links

--- a/client.html
+++ b/client.html
@@ -95,47 +95,34 @@
 				<ul class="list list_center list_margin-20px hidden-box">
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide js-pointer-small">
+							<a href="https://www.facebook.com/daxadsofficial" class="anim-slide js-pointer-small">
 								<i class="fab fa-facebook-f"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-02 js-pointer-small">
+							<a href="https://twitter.com/dax_ads" class="anim-slide tr-delay-02 js-pointer-small">
 								<i class="fab fa-twitter"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-04 js-pointer-small">
+							<a href="https://www.instagram.com/dax_ads/?hl=en" class="anim-slide tr-delay-04 js-pointer-small">
 								<i class="fab fa-instagram"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-06 js-pointer-small">
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="anim-slide tr-delay-06 js-pointer-small">
 								<i class="fab fa-linkedin"></i>
 							</a>
 						</div>
 					</li>
-					<!-- <li class="list__item">
-						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-08 js-pointer-small">
-								<i class="fab fa-dribbble"></i>
-							</a>
-						</div>
-					</li> -->
-					<!-- <li class="list__item">
-						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-10 js-pointer-small">
-								<i class="fab fa-youtube"></i>
-							</a>
-						</div>
-					</li> -->
 				</ul>
+			</div><!-- header-social end -->
 		</header><!-- header end -->
 
 		<!-- navigation start -->
@@ -148,7 +135,7 @@
 					<a href="about-us.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="#models" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
+					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
@@ -191,7 +178,7 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="#" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="academy.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Academy">Academy</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -293,11 +280,11 @@
 						<!-- grid-item start -->
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
-								<a href="post_dont-panic.html" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/posts/dont-panic/incense-and-white-candles-on-a-stool-3865712.jpg" alt="Post">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/Arm.jpg" alt="client">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
-									<h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Don't panic. Don't panic.<br>Don't panic.</h3>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Don't panic. Don't panic.<br>Don't panic.</h3> -->
 								</a>
 							</div>
 						</article><!-- grid-item end -->
@@ -305,11 +292,11 @@
 						<!-- grid-item start -->
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
-								<a href="post_red-cars.html" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/posts/red-cars/woman-standing-on-volkswagen-beetle-3342697.jpg" alt="Post">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/ast.jpg" alt="client">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
-									<h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Do red cars cost<br>more to insure</h3>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Do red cars cost<br>more to insure</h3> -->
 								</a>
 							</div>
 						</article><!-- grid-item end -->
@@ -317,11 +304,11 @@
 						<!-- grid-item start -->
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
-								<a href="post_good-morning.html" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/posts/good-morning/round-white-ceramic-saucer-and-coffee-cup-2638019.jpg" alt="Post">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/automagic.jpg" alt="client">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
-									<h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Good morning!<br>Have a nice day</h3>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Modern architecture and<br>design society</h3> -->
 								</a>
 							</div>
 						</article><!-- grid-item end -->
@@ -329,11 +316,11 @@
 						<!-- grid-item start -->
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
-								<a href="post_dont-panic.html" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/posts/modern-design/architectural-design-architecture-artistic-bright-1963478.jpg" alt="Post">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/cpg.jpg" alt="client">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
-									<h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Modern architecture and<br>design society</h3>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home decor and furniture<br>stores near me</h3> -->
 								</a>
 							</div>
 						</article><!-- grid-item end -->
@@ -341,11 +328,11 @@
 						<!-- grid-item start -->
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
-								<a href="post_dont-panic.html" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/posts/decor-and-furniture/two-vases-on-table-842950.jpg" alt="Post">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/cnn.jpg" alt="client">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
-									<h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home decor and furniture<br>stores near me</h3>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Columns in modern<br>and classical architecture</h3> -->
 								</a>
 							</div>
 						</article><!-- grid-item end -->
@@ -353,11 +340,11 @@
 						<!-- grid-item start -->
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
-								<a href="post_dont-panic.html" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/posts/columns/man-leaning-on-post-3205988.jpg" alt="Post">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/edu wings.jpg" alt="client">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
-									<h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Columns in modern<br>and classical architecture</h3>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Best electronic music festivals<br>in the world</h3> -->
 								</a>
 							</div>
 						</article><!-- grid-item end -->
@@ -365,11 +352,11 @@
 						<!-- grid-item start -->
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
-								<a href="post_dont-panic.html" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/posts/electronic-music-fest/abstract-art-ball-blue-236095.jpg" alt="Post">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/carclub.jpg" alt="client">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
-									<h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Best electronic music festivals<br>in the world</h3>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Good morning!<br>Have a nice day</h3> -->
 								</a>
 							</div>
 						</article><!-- grid-item end -->
@@ -377,11 +364,11 @@
 						<!-- grid-item start -->
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
-								<a href="post_dont-panic.html" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/posts/selfie/person-holding-android-smartphone-2066896.jpg" alt="Post">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/lancaster.jpg" alt="client">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
-									<h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Selfie culture<br>and contemporary art</h3>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Selfie culture<br>and contemporary art</h3> -->
 								</a>
 							</div>
 						</article><!-- grid-item end -->
@@ -389,11 +376,11 @@
 						<!-- grid-item start -->
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
-								<a href="post_dont-panic.html" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/posts/photo-studio/person-holding-canon-dslr-camea-1738637.jpg" alt="Post">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/leads.jpg" alt="client">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
-									<h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Second hand photography<br>studio equipment</h3>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Second hand photography<br>studio equipment</h3> -->
 								</a>
 							</div>
 						</article><!-- grid-item end -->
@@ -401,11 +388,11 @@
 						<!-- grid-item start -->
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
-								<a href="post_dont-panic.html" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/posts/nature-photographer/woman-walking-on-road-3193811.jpg" alt="Post">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/maithri.jpg" alt="client">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
-									<h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Nature photography hashtags<br>for instagram</h3>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Nature photography hashtags<br>for instagram</h3> -->
 								</a>
 							</div>
 						</article><!-- grid-item end -->
@@ -413,11 +400,11 @@
 						<!-- grid-item start -->
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
-								<a href="post_dont-panic.html" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/posts/home-studio/pexels-3388901.jpg" alt="Post">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/nationalsawmill.jpg" alt="client">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
-									<h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
 								</a>
 							</div>
 						</article><!-- grid-item end -->
@@ -425,14 +412,25 @@
 						<!-- grid-item start -->
 						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
 							<div class="grid-margin-box_10px hover-box pos-rel">
-								<a href="post_dont-panic.html" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
-									<img class="img-hover-scale" src="assets/images/posts/music-equipment/gray-google-home-mini-beside-silver-iphone-5s-1279365.jpg" alt="Post">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/powershift.jpg" alt="client">
 									<!-- bg-overlay -->
 									<div class="bg-overlay-black"></div>
-									<h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Music equipment<br>to record at home</h3>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Music equipment<br>to record at home</h3> -->
 								</a>
 							</div>
 						</article><!-- grid-item end -->
+						<article class="padding-top-20 grid-item-25-50-100 js-isotope-grid-item">
+							<div class="grid-margin-box_10px hover-box pos-rel">
+								<a href="#" class="d-block pos-rel hidden-box content-bg-dark-1 js-pointer-large js-animsition-link">
+									<img class="img-hover-scale" src="assets/images/clients/kanchi.jpg" alt="client">
+									<!-- bg-overlay -->
+									<div class="bg-overlay-black"></div>
+									<!-- <h3 class="pos-abs pos-left-bottom headline-xxxxs hover-move-right">Home recording studio<br>interior design</h3> -->
+								</a>
+							</div>
+						</article><!-- grid-item end -->
+
 					</div><!-- js-isotope-grid-box end -->
 				</div><!-- pos-rel end -->
 			</div><!-- blog end -->
@@ -469,7 +467,7 @@
 									<a href="about-us.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
 								</li>
 								<li>
-									<a href="#" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
+									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
 								</li>
 								<li>
 									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
@@ -491,7 +489,7 @@
 							<div class="column-l-r-margin-10">
 								<div class="headline-xxxxs">Email</div>
 								<div class="margin-top-10">
-									<a href="https://g.page/dax-ads-kannur?share" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">hello@daxads.com</a><br>
+									<a href="#" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">hello@daxads.com</a><br>
 									<!-- <a href="#" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">email@umaya_job.com</a> -->
 								</div>
 							</div>
@@ -524,19 +522,16 @@
 					<!-- footer-social start -->
 					<ul class="footer-social-desktop-hidden list list_center padding-top-90">
 						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
+							<a href="https://www.facebook.com/daxadsofficial" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
 						</li>
 						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
+							<a href="https://twitter.com/dax_ads" class="flip-btn js-pointer-small" data-text="twitter">twitter</a>
 						</li>
 						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Youtube">Youtube</a>
+							<a href="https://www.instagram.com/dax_ads/?hl=en" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
 						</li>
 						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Behance">twitter</a>
-						</li>
-						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
 						</li>
 					</ul><!-- footer-social end -->
 
