--- a/index.html
+++ b/index.html
@@ -95,46 +95,32 @@
 				<ul class="list list_center list_margin-20px hidden-box">
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide js-pointer-small">
+							<a href="https://www.facebook.com/daxadsofficial" class="anim-slide js-pointer-small">
 								<i class="fab fa-facebook-f"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-02 js-pointer-small">
+							<a href="https://twitter.com/dax_ads" class="anim-slide tr-delay-02 js-pointer-small">
 								<i class="fab fa-twitter"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-04 js-pointer-small">
+							<a href="https://www.instagram.com/dax_ads/?hl=en" class="anim-slide tr-delay-04 js-pointer-small">
 								<i class="fab fa-instagram"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-06 js-pointer-small">
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="anim-slide tr-delay-06 js-pointer-small">
 								<i class="fab fa-linkedin"></i>
 							</a>
 						</div>
 					</li>
-					<!-- <li class="list__item">
-						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-08 js-pointer-small">
-								<i class="fab fa-dribbble"></i>
-							</a>
-						</div>
-					</li> -->
-					<!-- <li class="list__item">
-						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-10 js-pointer-small">
-								<i class="fab fa-youtube"></i>
-							</a>
-						</div>
-					</li> -->
 				</ul>
 			</div><!-- header-social end -->
 		</header><!-- header end -->
@@ -149,7 +135,7 @@
 					<a href="about-us.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="#models" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
+					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
@@ -192,7 +178,7 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="#" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="academy.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Academy">Academy</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -213,7 +199,7 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="#" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="contact.htlm" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Contact">Contact</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -522,7 +508,7 @@
 									</span> -->
 								</h2>
 								<div class="margin-top-30 anim-fade tr-delay-08">
-									<a href="#" class="border-btn js-pointer-large">
+									<a href="academy.html" class="border-btn js-pointer-large">
 										<span class="border-btn__inner">Read more</span>
 										<span class="border-btn__lines-1"></span>
 										<span class="border-btn__lines-2"></span>
@@ -1126,8 +1112,8 @@
 							<!-- clients-lines__column start -->
 							<div class="clients-lines__column">
 								<div class="clients-lines__inner hover-box pos-rel">
-									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/dongolok.png" alt="clients logo">
-									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/dongolok-red.png" alt="clients logo">
+									<img class="client-logo client-hover-out pos-abs pos-center-center" src="assets/images/clients/royal intl.png" alt="clients logo">
+									<img class="client-logo client-hover-in pos-abs pos-center-center" src="assets/images/clients/royal-red.png" alt="clients logo">
 								</div>
 							</div><!-- clients-lines__column end -->
 
@@ -1462,7 +1448,7 @@
 									<a href="about-us.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
 								</li>
 								<li>
-									<a href="#" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
+									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
 								</li>
 								<li>
 									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
@@ -1517,19 +1503,16 @@
 					<!-- footer-social start -->
 					<ul class="footer-social-desktop-hidden list list_center padding-top-90">
 						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
+							<a href="https://www.facebook.com/daxadsofficial" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
 						</li>
 						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
+							<a href="https://twitter.com/dax_ads" class="flip-btn js-pointer-small" data-text="twitter">twitter</a>
 						</li>
 						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Youtube">Youtube</a>
+							<a href="https://www.instagram.com/dax_ads/?hl=en" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
 						</li>
 						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Behance">twitter</a>
-						</li>
-						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
 						</li>
 					</ul><!-- footer-social end -->
 
