--- a/blog.html
+++ b/blog.html
@@ -95,47 +95,34 @@
 				<ul class="list list_center list_margin-20px hidden-box">
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide js-pointer-small">
+							<a href="https://www.facebook.com/daxadsofficial" class="anim-slide js-pointer-small">
 								<i class="fab fa-facebook-f"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-02 js-pointer-small">
+							<a href="https://twitter.com/dax_ads" class="anim-slide tr-delay-02 js-pointer-small">
 								<i class="fab fa-twitter"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-04 js-pointer-small">
+							<a href="https://www.instagram.com/dax_ads/?hl=en" class="anim-slide tr-delay-04 js-pointer-small">
 								<i class="fab fa-instagram"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-06 js-pointer-small">
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="anim-slide tr-delay-06 js-pointer-small">
 								<i class="fab fa-linkedin"></i>
 							</a>
 						</div>
 					</li>
-					<!-- <li class="list__item">
-						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-08 js-pointer-small">
-								<i class="fab fa-dribbble"></i>
-							</a>
-						</div>
-					</li> -->
-					<!-- <li class="list__item">
-						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-10 js-pointer-small">
-								<i class="fab fa-youtube"></i>
-							</a>
-						</div>
-					</li> -->
 				</ul>
+			</div><!-- header-social end -->
 		</header><!-- header end -->
 
 		<!-- navigation start -->
@@ -148,7 +135,7 @@
 					<a href="about-us.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="#models" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
+					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
@@ -191,7 +178,7 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="#" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="academy.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Academy">Academy</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -226,7 +213,7 @@
 							<div class="headline-xxxxs nav-title-color nav-reveal-anim js-nav-anim">Email</div>
 						</div>
 						<div class="nav-fade-anim js-nav-anim margin-top-10">
-							<a href="#" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">hello@daxads.com</a><br>
+							<a href="mailto:hello@daxads.com" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">hello@daxads.com</a><br>
 							<!-- <a href="#" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">email@umaya_job.com</a> -->
 						</div>
 					</div><!-- nav-email end -->
@@ -251,8 +238,8 @@
 							<div class="headline-xxxxs nav-title-color nav-reveal-anim js-nav-anim">Phone</div>
 						</div>
 						<div class="nav-fade-anim js-nav-anim margin-top-10">
-							<a href="#" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">+91 8281447758</a><br>
-							<a href="#" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">+91 9447774937</a>
+							<a href="tel:918281447758" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">+91 8281447758</a><br>
+							<a href="tel:919447774937" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">+91 9447774937</a>
 						</div>
 					</div><!-- nav-phone end -->
 				</div><!-- nav-information end -->
@@ -483,7 +470,7 @@
 									<a href="about-us.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
 								</li>
 								<li>
-									<a href="#" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
+									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
 								</li>
 								<li>
 									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
@@ -505,7 +492,7 @@
 							<div class="column-l-r-margin-10">
 								<div class="headline-xxxxs">Email</div>
 								<div class="margin-top-10">
-									<a href="https://g.page/dax-ads-kannur?share" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">hello@daxads.com</a><br>
+									<a href="#" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">hello@daxads.com</a><br>
 									<!-- <a href="#" class="subhead-xxs text-color-b0b0b0 text-hover-to-white js-pointer-small">email@umaya_job.com</a> -->
 								</div>
 							</div>
@@ -538,19 +525,16 @@
 					<!-- footer-social start -->
 					<ul class="footer-social-desktop-hidden list list_center padding-top-90">
 						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
+							<a href="https://www.facebook.com/daxadsofficial" class="flip-btn js-pointer-small" data-text="Facebook">Facebook</a>
 						</li>
 						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
+							<a href="https://twitter.com/dax_ads" class="flip-btn js-pointer-small" data-text="twitter">twitter</a>
 						</li>
 						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Youtube">Youtube</a>
+							<a href="https://www.instagram.com/dax_ads/?hl=en" class="flip-btn js-pointer-small" data-text="Instagram">Instagram</a>
 						</li>
 						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Behance">twitter</a>
-						</li>
-						<li class="list__item">
-							<a href="#" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="flip-btn js-pointer-small" data-text="Twitter">linkedin</a>
 						</li>
 					</ul><!-- footer-social end -->
 
