--- a/contact.html
+++ b/contact.html
@@ -95,47 +95,34 @@
 				<ul class="list list_center list_margin-20px hidden-box">
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide js-pointer-small">
+							<a href="https://www.facebook.com/daxadsofficial" class="anim-slide js-pointer-small">
 								<i class="fab fa-facebook-f"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-02 js-pointer-small">
+							<a href="https://twitter.com/dax_ads" class="anim-slide tr-delay-02 js-pointer-small">
 								<i class="fab fa-twitter"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-04 js-pointer-small">
+							<a href="https://www.instagram.com/dax_ads/?hl=en" class="anim-slide tr-delay-04 js-pointer-small">
 								<i class="fab fa-instagram"></i>
 							</a>
 						</div>
 					</li>
 					<li class="list__item">
 						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-06 js-pointer-small">
+							<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="anim-slide tr-delay-06 js-pointer-small">
 								<i class="fab fa-linkedin"></i>
 							</a>
 						</div>
 					</li>
-					<!-- <li class="list__item">
-						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-08 js-pointer-small">
-								<i class="fab fa-dribbble"></i>
-							</a>
-						</div>
-					</li> -->
-					<!-- <li class="list__item">
-						<div class="hidden-box d-inline-block">
-							<a href="#" class="anim-slide tr-delay-10 js-pointer-small">
-								<i class="fab fa-youtube"></i>
-							</a>
-						</div>
-					</li> -->
 				</ul>
+			</div><!-- header-social end -->
 		</header><!-- header end -->
 
 		<!-- navigation start -->
@@ -148,7 +135,7 @@
 					<a href="about-us.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">About</a>
 				</li>
 				<li class="landing-nav__btn">
-					<a href="#models" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
+					<a href="academy.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Academy</a>
 				</li>
 				<li class="landing-nav__btn">
 					<a href="client.html" class="landing-nav__inner js-smooth-scroll js-pointer-large">Client</a>
@@ -191,7 +178,7 @@
 
 					<!-- nav-btn-box start -->
 					<li class="nav-btn-box">
-						<a href="#" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
+						<a href="academy.html" class="nav-btn large dropdown-hidden-btn js-animsition-link js-pointer-large">
 							<span class="nav-btn__inner" data-text="Academy">Academy</span>
 						</a>
 					</li><!-- nav-btn-box end -->
@@ -374,16 +361,16 @@
 						<div class="padding-top-90">
 							<ul class="list list_row list_margin-30px js-scrollanim">
 								<li class="list__item anim-fade">
-									<a href="#" class="fill-btn text-color-979797 js-pointer-small" data-text="Facebook">Facebook</a>
+									<a href="https://www.facebook.com/daxadsofficial" class="fill-btn text-color-979797 js-pointer-small" data-text="Facebook">Facebook</a>
 								</li>
 								<li class="list__item anim-fade tr-delay-01">
-									<a href="#" class="fill-btn text-color-979797 js-pointer-small" data-text="Dribbble">twitter</a>
+									<a href="https://twitter.com/dax_ads" class="fill-btn text-color-979797 js-pointer-small" data-text="Dribbble">twitter</a>
 								</li>
 								<li class="list__item anim-fade tr-delay-02">
-									<a href="#" class="fill-btn text-color-979797 js-pointer-small" data-text="Instagram">Instagram</a>
+									<a href="https://www.instagram.com/dax_ads/?hl=en" class="fill-btn text-color-979797 js-pointer-small" data-text="Instagram">Instagram</a>
 								</li>
 								<li class="list__item anim-fade tr-delay-03">
-									<a href="#" class="fill-btn text-color-979797 js-pointer-small" data-text="Youtube">linkedin</a>
+									<a href="https://www.linkedin.com/company/dax-ads/?originalSubdomain=in" class="fill-btn text-color-979797 js-pointer-small" data-text="Youtube">linkedin</a>
 								</li>
 								<!-- <li class="list__item anim-fade tr-delay-04">
 									<a href="#" class="fill-btn text-color-979797 js-pointer-small" data-text="Behance">Behance</a>
@@ -506,7 +493,7 @@
 									<a href="about-us.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">About</a>
 								</li>
 								<li>
-									<a href="#" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
+									<a href="academy.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Academy</a>
 								</li>
 								<li>
 									<a href="client.html" class="footer-nav__btn js-pointer-small js-footer-hover-link">Clients</a>
