--- a/academy.html
+++ b/academy.html
@@ -703,7 +703,7 @@
 				<div class="pos-rel padding-top-bottom-120">
 					<!-- title start -->
 					<h2 class="headline-xl text-color-black text-center hidden-box">
-						<span class="anim-slide js-scrollanim">Online courses</span>
+						<span class="anim-slide js-scrollanim">Our Courses</span>
 					</h2><!-- title end -->
 
 					<!-- flex-container start -->
@@ -719,11 +719,11 @@
 							<div class="column-l-margin-20 anim-fade js-scrollanim">
 								<div class="margin-left-right-20">
 									<div class="margin-bottom-30">
-										<span class="subhead-xxs text-color-red">Architecture</span>
-										<h3 class="headline-xxxs text-color-black margin-top-5">
+										<span class="headline-xxs text-color-red">Degital Marketing</span>
+										<!-- <h3 class="headline-xxxs text-color-black margin-top-5">
 											Scenester semiotics plaid<br>
 											Vegan four loko
-										</h3>
+										</h3> -->
 										<p class="body-text-s text-color-black margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
 									</div>
 									<a href="#" class="skew-btn js-pointer-large">
@@ -744,11 +744,11 @@
 							<div class="column-r-margin-20 anim-fade js-scrollanim">
 								<div class="margin-left-right-20">
 									<div class="margin-bottom-30">
-										<span class="subhead-xxs text-color-red">Web development</span>
-										<h3 class="headline-xxxs text-color-black margin-top-5">
+										<span class="headline-xxs text-color-red">Web development</span>
+										<!-- <h3 class="headline-xxxs text-color-black margin-top-5">
 											Vinyl twee bicycle rights<br>
 											Letterpress you
-										</h3>
+										</h3> -->
 										<p class="body-text-s text-color-black margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
 									</div>
 									<a href="#" class="skew-btn js-pointer-large">
@@ -781,73 +781,11 @@
 							<div class="column-l-margin-20 anim-fade js-scrollanim">
 								<div class="margin-left-right-20">
 									<div class="margin-bottom-30">
-										<span class="subhead-xxs text-color-red">Graphic design</span>
-										<h3 class="headline-xxxs text-color-black margin-top-5">
+										<span class="headline-xxs text-color-red">Graphic design</span>
+										<!-- <h3 class="headline-xxxs text-color-black margin-top-5">
 											Probably haven't heard<br>
 											Of them before they sold out
-										</h3>
-										<p class="body-text-s text-color-black margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
-									</div>
-									<a href="#" class="skew-btn js-pointer-large">
-										<span class="skew-btn__box">
-											<span class="skew-btn__content text-color-black">Learn more</span>
-											<span class="skew-btn__arrow black"></span>
-										</span>
-									</a>
-								</div>
-							</div>
-						</div><!-- column end -->
-					</div><!-- flex-container end -->
-
-					<!-- flex-container start -->
-					<div class="flex-container reverse flex-align-center padding-top-60">
-						<!-- column start -->
-						<div class="three-offset four-columns column-50-100 padding-top-30">
-							<div class="column-r-margin-20 anim-fade js-scrollanim">
-								<div class="margin-left-right-20">
-									<div class="margin-bottom-30">
-										<span class="subhead-xxs text-color-red">Copywriting</span>
-										<h3 class="headline-xxxs text-color-black margin-top-5">
-											Activated charcoal small<br>
-											Master cleanse meh affogato
-										</h3>
-										<p class="body-text-s text-color-black margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
-									</div>
-									<a href="#" class="skew-btn js-pointer-large">
-										<span class="skew-btn__box">
-											<span class="skew-btn__content text-color-black">Learn more</span>
-											<span class="skew-btn__arrow black"></span>
-										</span>
-									</a>
-								</div>
-							</div>
-						</div><!-- column end -->
-						<!-- column start -->
-						<div class="five-columns column-50-100 padding-top-30">
-							<a href="assets/images/projects/courses/paper-with-text-lying-over-book-3847702.jpg" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
-								<img src="assets/images/projects/courses/paper-with-text-lying-over-book-3847702.jpg" alt="course">
-							</a>
-						</div><!-- column end -->
-					</div><!-- flex-container end -->
-
-					<!-- flex-container start -->
-					<div class="flex-container flex-align-center padding-top-60">
-						<!-- column start -->
-						<div class="five-columns column-50-100 padding-top-30">
-							<a href="assets/images/projects/courses/notebook-with-smartphone-showing-photo-gallery-app-on-screen-3850246.jpg" class="d-block anim-overlay js-scrollanim js-pointer-zoom js-photo-popup">
-								<img src="assets/images/projects/courses/notebook-with-smartphone-showing-photo-gallery-app-on-screen-3850246.jpg" alt="course">
-							</a>
-						</div><!-- column end -->
-						<!-- column start -->
-						<div class="four-columns column-50-100 padding-top-30">
-							<div class="column-l-margin-20 anim-fade js-scrollanim">
-								<div class="margin-left-right-20">
-									<div class="margin-bottom-30">
-										<span class="subhead-xxs text-color-red">Graphic design</span>
-										<h3 class="headline-xxxs text-color-black margin-top-5">
-											Probably haven't heard<br>
-											Of them before they sold out
-										</h3>
+										</h3> -->
 										<p class="body-text-s text-color-black margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
 									</div>
 									<a href="#" class="skew-btn js-pointer-large">
