course individual page

--- a/academy.html
+++ b/academy.html
@@ -402,14 +402,15 @@
 							<div class="column-l-margin-20 anim-fade js-scrollanim">
 								<div class="margin-left-right-20">
 									<div class="margin-bottom-30">
-										<span class="headline-xxs text-color-red">Degital Marketing</span>
+										<span class="headline-xxs text-color-red">Digital Marketing</span>
 										<!-- <h3 class="headline-xxxs text-color-black margin-top-5">
 											Scenester semiotics plaid<br>
 											Vegan four loko
 										</h3> -->
-										<p class="body-text-s text-color-black margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
+										<p class="body-text-s text-color-black margin-top-20">
+											Digital Marketing is one of the fastest growing sectors in the world. Digital Marketing is a New-Age form of marketing. To put it simple, Digital Marketing is internet marketing, from which we can market our products or services to any part of the country with the help of online platform such as Google, Bing, Websites, Social Media, Email and Mobile Applications.</p>
 									</div>
-									<a href="#" class="skew-btn js-pointer-large">
+									<a href="course 1.html" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Learn more</span>
 											<span class="skew-btn__arrow black"></span>
@@ -434,7 +435,7 @@
 										</h3> -->
 										<p class="body-text-s text-color-black margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
 									</div>
-									<a href="#" class="skew-btn js-pointer-large">
+									<a href="course 1.html" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Learn more</span>
 											<span class="skew-btn__arrow black"></span>
@@ -471,7 +472,7 @@
 										</h3> -->
 										<p class="body-text-s text-color-black margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
 									</div>
-									<a href="#" class="skew-btn js-pointer-large">
+									<a href="course 1.html" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Learn more</span>
 											<span class="skew-btn__arrow black"></span>
