academy page edit

--- a/academy.html
+++ b/academy.html
@@ -433,9 +433,10 @@
 											Vinyl twee bicycle rights<br>
 											Letterpress you
 										</h3> -->
-										<p class="body-text-s text-color-black margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
+										<p class="body-text-s text-color-black margin-top-20">
+											Web development is the building and maintenance of websites; it's the work that happens behind the scenes to make a website look great...</p>
 									</div>
-									<a href="course 1.html" class="skew-btn js-pointer-large">
+									<a href="course 3.html" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Learn more</span>
 											<span class="skew-btn__arrow black"></span>
@@ -470,9 +471,10 @@
 											Probably haven't heard<br>
 											Of them before they sold out
 										</h3> -->
-										<p class="body-text-s text-color-black margin-top-20">Plaid retro migas venmo lo-fi ethical artisan fingerstache seitan you probably haven't heard of them fam keffiyeh...</p>
+										<p class="body-text-s text-color-black margin-top-20">
+											Graphic Design plays a very important role in today’s world. Graphic Design is an art used to create visual communication like Billboards, logos, magazines, web templates, vector graphics, raster graphics, etc…</p>
 									</div>
-									<a href="course 1.html" class="skew-btn js-pointer-large">
+									<a href="course 2.html" class="skew-btn js-pointer-large">
 										<span class="skew-btn__box">
 											<span class="skew-btn__content text-color-black">Learn more</span>
 											<span class="skew-btn__arrow black"></span>
