--- a/course 3.html
+++ b/course 3.html
@@ -22,7 +22,7 @@
 		<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
 		<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
 
-		<title>DAX - Digital Marketing </title>
+		<title>DAX - Web Development </title>
 
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
@@ -261,11 +261,10 @@
 				<div class="lines-container pos-rel no-lines flex-min-height-30vh">
 					<div class="container padding-top-bottom-120 after-preloader-anim">
 						<h2 class="headline-s hidden-box">
-							<span class="anim-slide"><span class="text-color-red">Digital Marketing</span></span>
+							<span class="anim-slide"><span class="text-color-red">Web Development</span></span>
 						</h2>
 						<h3 class="subhead-s margin-top-20 anim-text-reveal tr-delay-03">
-							Digital Marketing is one of the fastest growing sectors in the world. Digital Marketing is a New-Age form of marketing. To put it simple, Digital Marketing is internet marketing, from which we can market our products or services to any part of the country with the help of online platform such as Google, Bing, Websites, Social Media, Email and Mobile Applications.</p>
-
+							Web development is the building and maintenance of websites; it's the work that happens behind the scenes to make a website look great, work fast and perform well with a seamless user experience. Web developers, or 'devs', do this by using a variety of coding languages.
 						</h3>
 					</div>
 				</div><!-- lines-container end -->
@@ -292,7 +291,7 @@
 							<!-- what we do start -->
 							<div class="padding-top-90">
 								<h2 class="headline-s hidden-box">
-									<span class="anim-slide js-scrollanim">What you will learn in Digital Marketing</span>
+									<span class="anim-slide js-scrollanim">What you will learn in Web Development</span>
 								</h2>
 								<!-- accordion start -->
 								<div class="accordion accordion_underline js-accordion js-accordion-first-active margin-top-60">
