--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta property="og:type" content="article"/>
 		<meta property="og:title" content="Dax"/>
 		<meta property="og:description" content="Creative Agency"/>
-		<meta property="og:image" content="assets/images/logo/logo-black.png"/>
+		<!-- <meta property="og:image" content="assets/images/logo/logo-black.png"/> -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="author" content="DAX">
@@ -17,7 +17,7 @@
 		<meta name="keywords" content="Digital marketing,web development, app development,advertising, agency,graphic designing,kannur, graphic designing kannur,kerala, seo,search engine optimization,ecommerce digital marketing agency,advertising mediadigital marketing solutions,digital marketing agency near me,digital marketing classes,mba in digital marketing,digital marketing specialist,digital marketing manager,digital marketing salary,digital marketing interview questions,digital marketing news,digital marketing strategies,digital market,digital marketing companies,digital marketing training,digital marketing certification,google digital marketing certificate,digital marketing agencies,digital marketing institute,digital advertising,digital marketing definition,digital marketer,digital marketing strategy,digital marketing tools,digital marketing courses,learn digital with google,digital marketing services,google garage digital marketing,digital marketing jobs,digital marketing course online free,digital marketing company,google digital marketing,fundamentals of digital marketing,marketing digital,digital marketing agency,digital marketing online course,digital marketing course online,digital marketing course,what is digital marketing,google digital marketing course">
 
 		<!-- favicon -->
-		<link rel="shortcut icon" href="assets/images/favicon.png">
+		<link rel="shortcut icon" href="assets/images/favicon-black.png">
 		<link rel="apple-touch-icon" href="assets/images/apple-touch-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
 		<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
