--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta property="og:type" content="article"/>
 		<meta property="og:title" content="Dax"/>
 		<meta property="og:description" content="Creative Agency"/>
-		<!-- <meta property="og:image" content="assets/images/logo/logo-black.png"/> -->
+		<meta property="og:image" content="assets/images/logo/logo-black.png"/>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="author" content="DAX">
@@ -18,9 +18,9 @@
 
 		<!-- favicon -->
 		<link rel="shortcut icon" href="assets/images/favicon-black.png">
-		<link rel="apple-touch-icon" href="assets/images/apple-touch-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
+		<link rel="apple-touch-icon" href="assets/images/apple-touch-icon-57x57-black.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72-black.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114-black.png">
 
 		<title>DAX - Best Digital Marketing Agency </title>
 
