meta image test

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta property="og:type" content="article"/>
 		<meta property="og:title" content="Dax"/>
 		<meta property="og:description" content="Creative Agency"/>
-		<meta property="og:image" content="assets/images/apple-touch-icon-114x114-white.png"/>
+		<meta property="og:image" content="https://kaz33359.github.io/Dax/assets/images/apple-touch-icon-114x114-white.png"/>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="author" content="DAX">
@@ -213,7 +213,7 @@
 							<div class="headline-xxxxs nav-title-color nav-reveal-anim js-nav-anim">Email</div>
 						</div>
 						<div class="nav-fade-anim js-nav-anim margin-top-10">
-							<a href="mailto:hello@daxads.com" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">hello@daxads.com</a><br>
+							<a href="mailto:hello@thedaxads.com" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">hello@thedaxads.com</a><br>
 							<!-- <a href="#" class="subhead-xxs nav-text-color text-hover-to-red js-pointer-small">email@umaya_job.com</a> -->
 						</div>
 					</div><!-- nav-email end -->
